2007-10-03  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (get_first_active_device): use active connection list now
		- (nma_menu_device_add_networks, nma_add_networks_helper): don't depend
			on only the active SSID, use the active connection to find out what
			AP should be marked in the menu
		- (clear_active_connections, foo_device_state_changed): update active
			connections when a device's state changes
		- (foo_client_state_change): clear active connections when NM goes away
		- (void nma_finalize): clear active connections on quit

2007-10-01  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (read_one_setting_value_from_gconf, copy_one_setting_value_to_gconf):
			handle new UINT64 type, but since GConf can't do uint64, use
			floats instead
		- (nm_gconf_get_float_helper, nm_gconf_set_float_helper): new functions

2007-10-01  Dan Williams  <dcbw@redhat.com>

	Patch from Matthias Clasen <mclasen@redhat.com>  (rh #307921)

	* src/applet.c
		- (nma_status_icon_size_changed_cb): actually redraw icons when the
			applet's size changes
		- (foo_wireless_state_change, foo_wired_state_change,
		   foo_device_state_changed_cb, foo_device_state_changed,
		   foo_device_added_cb, foo_client_state_change_cb,
		   foo_client_state_change, foo_setup_client_state_handlers,
		   foo_manager_running_cb, foo_manager_running, foo_set_initial_state,
		   foo_client_setup): add a 'synthetic' argument to functions that
			emit notifications to suppress notification events that are
			generated by internal state updates (ie, on launch when reading
			initial NM state)

2007-10-01  Dan Williams  <dcbw@redhat.com>

	Patch from Stéphane Loeuillet <leroutier@gmail.com>

	* nm-applet.desktop
		- Use XDG standard autostart directory
		- Bring up to spec; remove deprecated Encoding tag; remove --sm-disable
			because it's not session-managed anymore (rh #313031)

2007-10-01  Dan Williams  <dcbw@redhat.com>

	* src/applet.c